# sycl

./: README.md  clang++  lsf-wrapper  notes  out.o.lst
clang/tools/archgen-mlir/: ArchGenMLIR.cpp  CMakeLists.txt
clang/tools/sycl-xocc/: CMakeLists.txt
sycl/: CMakeLists.txt
sycl/cmake/modules/: AddSYCLUnitTest.cmake
sycl/doc/: AMDArchGenMLIR.md  AMDGettingStartedAIE.md  AMDGettingStartedFPGA.md  AMDGettingStartedFPGAIPBlockDesign.md  AMDtestsFPGA.md  GetStartedWithSYCLCompiler.md  GettingStartedACAP.md  GettingStartedAIE.md  GettingStartedAlveo.md  GettingStartedIPblocksDeisgn.md  GettingStartedXilinxFPGA.md  GettingStartedXilinxFPGAIPBlockDesign.md  Tests.md  XilinxFPGACompilation.md  Xilinx_sycl_compiler_architecture.rst  doc_sycl_compiler.rst
sycl/doc/design/: AMD_FPGA_SYCL_compiler_architecture.rst  AMD_SYCL_compiler_architecture.rst
sycl/include/CL/: sycl.hpp
sycl/include/sycl/: aspects.hpp  backend.hpp  backend_types.hpp  device.hpp  device_aspect_macros.hpp  device_aspect_traits.hpp  feature_test.hpp.in  group.hpp  handler.hpp  kernel.hpp  kernel_bundle.hpp
sycl/plugins/: CMakeLists.txt
sycl/plugins/aie/: CMakeLists.txt
sycl/plugins/level_zero/: usm_allocator.cpp
sycl/plugins/opencl/: pi_opencl.cpp
sycl/plugins/xrt/: CMakeLists.txt  pi_xrt.cpp  pi_xrt.hpp.back  reproducer.h
sycl/source/: backend.cpp  device_selector.cpp  feature_test.hpp.in
sycl/source/detail/: config.cpp  config.hpp  device_binary_image.hpp  device_filter.cpp  device_impl.cpp  filter_selector_impl.cpp  memory_manager.cpp  pi.cpp  pi_opencl.cpp  platform_util.cpp
sycl/test/: CMakeLists.txt  helpers.hpp  lit.cfg.py
sycl/test/abi/: layout_array.cpp  sycl_symbols_linux.dump
sycl/test/acap/: test_aie_allocator_test.cpp  test_aie_assert.cpp  test_aie_buffer.cpp  test_aie_buffer2.cpp  test_aie_buffer3.cpp  test_aie_cascade_stream.cpp  test_aie_cstreams.cpp  test_aie_cstreams2.cpp  test_aie_device_allocator.cpp  test_aie_elf_reader.cpp  test_aie_full_tile.cpp  test_aie_global.cpp  test_aie_grey_scale.cpp  test_aie_hard.cpp  test_aie_heterogenoues_types.cpp  test_aie_host_malloc.cpp  test_aie_intrinsic.cpp  test_aie_libstdcpp.cpp  test_aie_lock_memory2.cpp  test_aie_lock_memory3.cpp  test_aie_mandelbrot.cpp  test_aie_mandelbrot_uniform.cpp  test_aie_math.cpp  test_aie_neighbor_memory_hw_lock.cpp  test_aie_neighborhood_lock.cpp  test_aie_new_model.cpp  test_aie_simple_funtion.cpp  test_aie_streams.cpp  test_aie_streams2.cpp  test_aie_streams3.cpp  test_aie_test_barrier.cpp  test_aie_wave_propagation3.cpp
sycl/test/acap_tests/: hello_world.cpp
sycl/test/aie/: assert.cpp  barrier.cpp  basic_buffer.cpp  cascade_stream.cpp  debug_log.cpp  mandelbrot.cpp  mandelbrot_hetero.cpp  mandelbrot_hetero2.cpp  metaprogramming.cpp  ranged_buffer.cpp  ranged_buffer2.cpp  ranged_buffer3.cpp  ranged_buffer4.cpp  static_typing_complex.cpp  static_typing_disabled.cpp  static_typing_hetero.cpp  static_typing_selector.cpp  user_defined_rpc.cpp  user_defined_service.cpp  wave_propagation.cpp
sycl/test/aot/: with-llvm-bc.cpp
sycl/test/basic_tests/: SYCL-2020-spec-const-ids-order.cpp  access_to_subset.cpp  aliases.cpp  atomic-ref-instantiation.cpp  boolean.cpp  compare_exchange_strong.cpp  context.cpp  device.cpp  device_event.cpp  event.cpp  event_profiling_info.cpp  generic_type_traits.cpp  group.cpp  half_type.cpp  host_image_accessor_read.cpp  id.cpp  image.cpp  image_accessor_readsampler.cpp  image_accessor_readwrite.cpp  image_api.cpp  image_array.cpp  image_constructors.cpp  info.cpp  item.cpp  kernel_interop.cpp  macros.cpp  nd_item.cpp  nd_range.cpp  ordered_buffs.cpp  ordered_queue.cpp  parallel_for_indexers.cpp  parallel_for_range.cpp  platform.cpp  property_list.cpp  queue.cpp  range.cpp  range_error.cpp  set_arg_interop.cpp  stream.cpp  subdevice.cpp  (+5 more)
sycl/test/built-ins/: printf.cpp  scalar_common.cpp  scalar_geometric.cpp  scalar_integer.cpp  scalar_math.cpp  scalar_relational.cpp  vector_common.cpp  vector_geometric.cpp  vector_integer.cpp  vector_math.cpp  vector_relational.cpp
sycl/test/check_device_code/: buffer_location_codegen.cpp
sycl/test/extensions/: sub_group_as.cpp
sycl/test/fpga_tests/: fpga_pipes.cpp  fpga_queue.cpp
sycl/test/functor/: kernel_functor.cpp
sycl/test/hier_par/: hier_par_basic.cpp  hier_par_wgscope.cpp
sycl/test/kernel-and-program/: kernel-and-program.cpp
sycl/test/kernel_from_file/: hw.cpp
sycl/test/multi_ptr/: multi_ptr.cpp
sycl/test/multisource/: multisource.cpp
sycl/test/on-device/: back_to_back_collectives.cpp  lit.cfg.py
sycl/test/program_manager/: program_manager.cpp
sycl/test/regression/: atomic_load.cpp  group.cpp  image_access.cpp  kernel_name_class.cpp  kernel_name_inside_sycl_namespace.cpp  kernel_unnamed.cpp  memcpy-update-leafs.cpp  static-buffer-dtor.cpp  sycl-include-gnu11.cpp  unable-to-redeclare-device.cpp
sycl/test/scheduler/: BasicSchedulerTests.cpp  GetWaitList.cpp  MultipleDevices.cpp  ReleaseResourcesTest.cpp
sycl/test/separate-compile/: same-kernel.cpp  sycl-external.cpp  test.cpp
sycl/test/struct_param/: struct_kernel_param.cpp
sycl/test/sub_group/: attributes.cpp  barrier.cpp  broadcast.cpp  common.cpp  common_ocl.cpp  info.cpp  load_store.cpp  reduce.cpp  scan.cpp  shuffle.cpp  vote.cpp
sycl/test/usm/: allocator_vector.cpp  allocator_vector_fail.cpp  allocatorll.cpp  depends_on.cpp  dmemll.cpp  dmemllaligned.cpp  hmemll.cpp  hmemllaligned.cpp  math.cpp  memadvise.cpp  memcpy.cpp  memset.cpp  mixed.cpp  ordered_dmemll.cpp  smemll.cpp  smemllaligned.cpp
sycl/test/xocc_tests/: run_tests.sh
sycl/tools/: CMakeLists.txt  cleanup_xsimk.cpp  get_device_count_by_type.cpp
sycl/tools/acap-intrinsic/: CMakeLists.txt  acap-intrinsic.cpp  acap-intrinsic.h
sycl/tools/aie-intrinsic/: CMakeLists.txt  aie-intrinsic.cpp  aie-intrinsic.h
sycl/tools/sycl-chess/: CMakeLists.txt
sycl/tools/sycl-vxx/: CMakeLists.txt
sycl/tools/sycl-xocc/: CMakeLists.txt
sycl/unittests/allowlist/: ParseAllowList.cpp
sycl/unittests/assert/: assert.cpp
sycl/unittests/pi/: BackendString.hpp  TestGetPlatforms.hpp
(+487 files in other folders)
